--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -12,7 +12,7 @@
  sessionStorage.setItem('Logics_loggedin', 'talas');
 
 </script>
-  <div class="thumbnail"> <a href="/login"> <img src="images/ht.png"/></a></div>
+  <div class="thumbnail"> <a href="/login#"> <img src="images/ht.png"/></a></div>
 
  
   </form>
