--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -25,7 +25,7 @@ if(data === "" )
     <input type="password" id = "re-pass" placeholder="Re-enter Password"/>
     <button id = "btnreg">Create</button>
     <br/>
-     <div id = "divregerror" class="hid"> <br/> <p id = "regerror"></p> </div>
+     <div class="hid"> <br/> <p id = "regerror"></p> </div>
     <p class="message">Already registered? <a href="#">Sign In</a></p>
   </form>
   <form class="login-form">
