--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
 <script>
 var data = sessionStorage.getItem('Logics_loggedin');
   
-if(data === "" )
+if(data !== "talas" )
 {
  alert("You Must Log Out");
   window.document.location.href = '/dashboard';
